egg_recursive/tests/invalid/language/01-generic-lang.stderr
error: generics are not supported
 --> tests/invalid/language/01-generic-lang.rs:4:21
  |
4 | pub enum GenericLang<T> {
  |                     ^^^
